RAG: Remove hard coded Location from grant permissions and docs

--- a/python/agents/RAG/.env.example
+++ b/python/agents/RAG/.env.example
@@ -19,5 +19,5 @@ RAG_CORPUS=YOUR_VALUE_HERE
 # Staging bucket name for ADK agent deployment to Vertex AI Agent Engine (Shall respect this format gs://your-bucket-name)
 STAGING_BUCKET=YOUR_VALUE_HERE
 
-# Agent Engine ID in the following format: projects/<PROJECT_NUMBER>/locations/us-central1/reasoningEngines/<AGENT_ENGINE_ID>
+# Agent Engine ID in the following format: projects/<PROJECT_NUMBER>/locations/<GOOGLE_CLOUD_LOCATION>/reasoningEngines/<AGENT_ENGINE_ID>
 AGENT_ENGINE_ID=YOUR_VALUE_HERE
